--- a/servicios/index.html
+++ b/servicios/index.html
@@ -207,10 +207,15 @@
           <div id="flush-collapseFive" class="accordion-collapse collapse" aria-labelledby="flush-headingFive" data-bs-parent="#accordionFlushExample">
             <div class="accordion-body texto-servicios fontTexto servicios-bloqueTexto d-flex justify-content-center">
               <span class="servicios-col">
-                <p>Cantidad de Revisiones  y sectores involucrados</p>
+                <p>Los servicios profesionales de Revisión Externa Independiente de Fidesnet Professional Advisory dan pleno cumplimiento a los requerimientos normativos establecidos en las Resoluciones UIF No. 14/2023, No. 21/2018, No. 28/2018, No. 76/2019 y No. 67-E/2017.</p>
+                <p>En ese sentido, los socios de Fidesnet se encuentran inscriptos en el Registro de Revisores Externos Independientes de la UIF, cumplen los requisitos académicos y profesionales establecidos en el artículo 2 de la Resolución UIF No. 67-E/2017 y no están incluidos en las causales de inhabilidad o incompatibilidad mencionadas en el artículo 3 de la mencionada normativa para emitir los informes de revisión externa independiente.</p>
+
+              
               </span>
               <span class="servicios-col">
-                <p>Breve reseña sobre la Revisiones Externas Independeinte </p>
+                <p>En el acápite <a href="../profesionales" class="colorDestacado texto-servicios-titulo d-inline-block">Nuestros Profesionales</a> se pueden consultar los antecedentes profesionales y académicos de los socios de FIDESnet.</p>
+
+                <p>Asimismo, es de destacar que la experiencia de Fidesnet se ve reforzada por el hecho de que nuestra Firma realizó más de 300 ejercicios de revisión externa independiente, en los términos de la Resolución UIF No. 67-E/2017, en unas 90 entidades, entre Bancos, Compañías Financieras, Aseguradoras, Agentes del Mercado de Capitales y Fintech, incluyendo entidades de capitales extranjeros y nacionales, públicas y privadas, cuyo vencimiento operó desde el año 2018 en adelante.</p>
               </span>
             </div>
           </div>
