--- a/contacto/emblue.html
+++ b/contacto/emblue.html
@@ -82,5 +82,5 @@ input[type="submit"] {
     </div>
 </div>
 
-</div><script type="text/javascript" src="https://app.embluemail.com/emblue/form_validation.js"></script></body>
+</div><script type="text/javascript" src="https://alvaroguzmandg.github.io/fidesNet/emblue/form_validation.js"></script></body>
 </html>
