--- a/contacto/emblue.html
+++ b/contacto/emblue.html
@@ -65,6 +65,7 @@ input[type="submit"] {
                 <tbody><tr>
                     <td colspan="2" align="center">
                         <input type="submit" value="Confirmar" datos="">
+                        <a href="https://app.embluemail.com/Online/TriggerUrlExterna.aspx?key=3c72e354-ab7f-4a18-9f44-65c6aeb71b5e&email=alvaroguzmandg@gmail.com">ENVIAR</a>
                     </td>
                 </tr>
             </tbody></table>
