--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
     <!-- <link rel="stylesheet" href="/styles/fidesnet.css"> -->
   </head>
   <body>
-    <span id="popHeader" class="topHeader">
+    <span id="popHeader" class="topHeader fontTexto">
       <span class="textoTopHeader">Evento Forum 22/03/2023 - "SEMINARIO TÉCNICO INTENSIVO"</span>
       <span class="botonheader" type="button" data-bs-toggle="modal" data-bs-target="#exampleModal">
         Ver más información
